# deadline-panel

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: database.md  mvp-plan.md  ui-mockup.html  window-behavior.md
scripts/: build-release.mjs  make-latest-json.mjs  patch-nsis-update-mode.mjs
src/: App.tsx  i18n.ts  main.tsx  styles.css  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/domain/: commandParser.ts  date.ts  quickAddParser.ts  seed.ts  task.ts  taskSorting.ts
src/runtime/: tauri.ts
src/storage/: storage.ts
src/store/: deadlineStore.ts
src/sync/: supabaseSync.ts
supabase/: schema.sql
updates/: latest.json
